--- a/Web_Doan_2023/appsettings.json
+++ b/Web_Doan_2023/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Web_Doan_2023Context": "Data Source=DESKTOP-R3CVCNR\\PHUC;Initial Catalog=Doan_2023;Integrated Security=True"
-  },
+  },//Đổi đường dẩn sql
  
   "JWT": {
     "ValidAudience": "https://localhost:7043",
