--- a/Web_Doan_2023/appsettings.json
+++ b/Web_Doan_2023/appsettings.json
@@ -7,12 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Web_Doan_2023Context": "Data Source=DESKTOP-R3CVCNR\\PHUC;Initial Catalog=Doan_2023;Integrated Security=True"
-  },//Đổi đường dẩn sql
- 
+    "Web_Doan_2023Context": "Data Source=NINH-PHUC;Initial Catalog=doan_2023;Integrated Security=True"
+  }, //Đổi đường dẩn sql
+
   "JWT": {
     "ValidAudience": "https://localhost:7043",
     "ValidIssuer": "https://localhost:7043",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   }
 }
+//Data Source=(localdb)\ProjectModels;Initial Catalog="New Database";Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False
