--- a/Web_Doan_2023/appsettings.json
+++ b/Web_Doan_2023/appsettings.json
@@ -14,6 +14,15 @@
     "ValidAudience": "https://localhost:7043",
     "ValidIssuer": "https://localhost:7043",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
+  "coreWebAPI": {
+    "commandName": "Web_Doan_2023",
+    "launchBrowser": false,
+    "launchUrl": "api/values",
+    "applicationUrl": "https://127.0.0.1:7109",
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Development"
+    }
   }
 }
 //Data Source=(localdb)\ProjectModels;Initial Catalog="New Database";Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False
