--- a/Web_Doan_2023/appsettings.json
+++ b/Web_Doan_2023/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Web_Doan_2023Context": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"Web_Doan_2023Context": "Data Source=NINH-PHUC;Initial Catalog=doan_2023;Integrated Security=True"
   }, //Đổi đường dẩn sql
 
   "JWT": {
